# fastapi-websocket

./: .dockerignore  Dockerfile  README.md  pyproject.toml
api/: acknowledge_job.py  api.py  main.py
